@@ -1,3 +1,8 @@
+2004-11-08  John Finlay  <finlay@moeraki.com>
+
+	* pygtk-gtkwindow.xml (Description, gtk.Window, set_position):
+	Add link to appropriate Constants description.
+
 2004-11-01  John Finlay  <finlay@moeraki.com>
 
 	* pygtk-gtksettings.xml Add gtk-alternative-button-order and
